# PureDataGD

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  vcpkg.json
demo/: default_bus_layout.tres  export_presets.cfg  icon.svg.import  main.gd  main.tscn  project.godot  sprite_2d.gd
demo/patches/: float_bang_test.pd  jump.pd  test-2.pd  test.pd
demo/scripts/: other_pd.gd  puredata.gd  rotate.gd  rotate2.gd
patches/: libpd-multi.patch
src/: puredatagd.cpp  puredatagd.h  register_types.cpp  register_types.h
